- add text `Enjoy using app! ©Vinso` on the launch screen

--- a/TaxiAggregator-iOS/Sources/Base.lproj/LaunchScreen.storyboard
+++ b/TaxiAggregator-iOS/Sources/Base.lproj/LaunchScreen.storyboard
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttf">
+            <string>HelveticaNeue-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="qgp-Om-oEW">
-                                <rect key="frame" x="78" y="142" width="219" height="303"/>
+                                <rect key="frame" x="97.5" y="256.5" width="219" height="303"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="icLogo" translatesAutoresizingMaskIntoConstraints="NO" id="gmz-EV-Uae">
                                         <rect key="frame" x="21.5" y="0.0" width="176" height="235"/>
@@ -27,11 +32,20 @@
                                     </imageView>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enjoy using app! ©Vinso" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7LL-q0-uuE">
+                                <rect key="frame" x="0.0" y="834.5" width="414" height="15.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Regular" family="HelveticaNeue" pointSize="14"/>
+                                <color key="textColor" red="0.49803921568627452" green="0.49803921568627452" blue="0.49803921568627452" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7LL-q0-uuE" secondAttribute="trailing" id="4Ri-od-lt8"/>
                             <constraint firstItem="qgp-Om-oEW" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="4dq-5C-bSt"/>
                             <constraint firstItem="qgp-Om-oEW" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-40" id="Nkg-tb-RH8"/>
+                            <constraint firstItem="7LL-q0-uuE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="avS-5v-thf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7LL-q0-uuE" secondAttribute="bottom" constant="12" id="zTQ-6a-oO8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
